--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -9,6 +9,7 @@
         <div class="row">
             <p class="lead">
                 Open-Source Full-Stack Solution For MEAN Applications
+                <div goods></div>
             </p>
         </div>
         <div class="row">
