--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -43,8 +43,8 @@
     <![endif]-->
 </head>
 
-<body class="ng-cloak" >
-    <header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-inverse"></header>
+<body class="ng-cloak" state={{stateeee}}>
+    <header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar transparent navbar-static-top"></header>
     <section class="content">
         <div>
             {% block content %}{% endblock %}
